--- a/final-index.html
+++ b/final-index.html
@@ -2,7 +2,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Black Rock Terminal - Real-Time Card Payment Terminal</title>
+  <title>RUTLAND Terminal - Real-Time Card Payment Terminal</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <link
     rel="stylesheet"
@@ -103,7 +103,7 @@
     <!-- TERMINAL ONLINE/OFFLINE STATUS -->
     <div id="terminalStatus" class="max-w-md mx-auto flex justify-center items-center space-x-3 text-gray-400 select-none" aria-live="polite" aria-atomic="true" role="status">
       <span id="statusIndicator" class="w-4 h-4 rounded-full bg-red-600 animate-pulse"></span>
-      <span id="statusText" class="text-sm font-semibold">Offline</span>
+      <span id="statusText" class="text-sm font-semibold">ONLINE</span>
     </div>
 
     <!-- PAYMENT TERMINAL -->
