--- a/gateway.html
+++ b/gateway.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8" />
-  <title>Black Rock — Gateway Monitor</title>
+  <title>rutland — Gateway Monitor</title>
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="bg-black text-gray-100 p-6">
@@ -51,3 +51,4 @@
   </script>
 </body>
 </html>
+
