--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>RUTLAND Terminal - Real-Time Card Payment Terminal</title>
+  <title>Blackrock Terminal - Real-Time Card Payment Terminal</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <link
     rel="stylesheet"
@@ -406,6 +406,7 @@
     const terminalStatus = document.getElementById("terminalStatus");
     const statusIndicator = document.getElementById("statusIndicator");
     const statusText = document.getElementById("statusText");
+    const API_BASE = "http://127.0.0.1:8000";
 
     // Forgot Password Modal Elements
     const forgotPasswordBtn = document.getElementById("forgotPasswordBtn");
