--- a/index.html
+++ b/index.html
@@ -234,6 +234,7 @@
     const terminalStatus = document.getElementById("terminalStatus");
     const statusIndicator = document.getElementById("statusIndicator");
     const statusText = document.getElementById("statusText");
+    const API_BASE = "http://127.0.0.1:8000";
 
     const forgotPasswordBtn = document.getElementById("forgotPasswordBtn");
     const forgotPasswordModal = document.getElementById("forgotPasswordModal");
